Added the ability to show the sidebar.html on the AJAX load

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
   <link href='//fonts.googleapis.com/css?family=Varela+Round' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="assets/css/main.css">
   <title>AJAX with JavaScript</title>
-  <script>
- 
-  </script>
+  <script src="assets/js/main.js"></script>
 </head>
 <body>
   <div class="grid-container centered">
@@ -16,6 +14,7 @@
         <div class="grid-100">
           <div class="heading">
             <h1>Bring on the AJAX</h1>
+            <button id="load" onclick="sendAJAX()">Bring It!</button>
           </div>
           <ul id="ajax">
 
@@ -24,6 +23,5 @@
       </div>
     </div>
   </div>
-  <script src="assets/js/main.js"></script>
 </body>
 </html>
